Position fixed and z-index 1 to make sure the nav bar it's always shown

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -6,6 +6,8 @@ nav {
   padding: 1.5em;
   font-family: 'Bungee', sans-serif;
   display: flex;
+  position: fixed;
+  z-index: 1;
 }
 
 #logo {
